change main bg color

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,7 +5,7 @@ $dark-blue: #333745;
 $blue: #3c4251;
 $light-blue: #464b5e;
 $off-black: #20222b;
-$off-white: #a5afd7;
+$off-white: #939393;
 $purple: #8357c5;
 
 // Spacing
