--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -54,5 +54,18 @@
   border: solid $fcc-green;
 }
 
+td:first-child {
+  width: 20px;  
+}
+
+td:nth-child(2) {
+  width: 50px;
+}
+
+td:nth-child(4),
+td:nth-child(5) {
+  width: 150px;
+}
+
 tr:nth-child(even) {background-color: #f2f2f2}
 tr:nth-child(odd) {background-color: white}
